--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,6 +1,4 @@
-body {
-  overflow-x: hidden;
-}
+
 
 .top_hr_wrapper {
   margin-top: 2rem;
@@ -64,16 +62,18 @@ body {
   display: flex;
   column-gap: 1rem;
   position: absolute;
-  top: clamp(2rem, 3%, 4rem);
+  top: 7%;
   left: 50%;
   transform: translateX(-50%);
-  z-index: 10; 
+  z-index: 10;
+  opacity: .7;
 }
 
 #slider-nav .nav-link {
+  flex: 0 0 auto;
   color: var(--bg-color);
-  width: 0.5rem;
-  height: 0.5rem;
+  width: .7rem;
+  height: .7rem;
   border-radius: 50%;
   background-color: #fff;
   opacity: 0.75;
@@ -473,6 +473,7 @@ transform: translate(100%, -50%);
   padding-top: 17rem;
   margin-left: 10rem;
   gap: 5rem;
+
   transition: all 1s ease-in-out;
 }
 
@@ -482,7 +483,7 @@ transform: translate(100%, -50%);
   width: 100%;
   text-transform: uppercase;
   gap: 3rem;
-  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   z-index: 10;
 }
 
@@ -490,10 +491,9 @@ transform: translate(100%, -50%);
   box-sizing: content-box;
   color: var(--bg-color);
   width: auto;
+  border: 5px solid #54F7DB;
   background-color: #19af4e;
-  -webkit-box-shadow: var(--box-shadowGlass);
-  -moz-box-shadow: var(--box-shadowGlass);
-  box-shadow: var(--box-shadowGlass);
+
   z-index: 100; 
   border-radius: 1rem;
   padding: 1rem;
@@ -609,21 +609,20 @@ transform: translate(100%, -50%);
   justify-content: center;
   align-items: center;
   gap: clamp(10rem, 17rem, 20rem);
-
   margin-bottom: 3rem;
-  transform: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
 .videos {
+  box-sizing: content-box;
   width: 400px;
   height: 300px;
-  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: 4px;
+  border: 8px solid var(--spotifyColor);
   object-fit: cover;
-  border: none;
-  outline: .15rem solid rgba(255, 255, 255, 092);
-  -webkit-box-shadow: var(--box-shadow1), var(--box-shadowGlass), var(--box-shadowItem);
-  -moz-box-shadow: var(--box-shadow1), var(--box-shadowGlass), var(--box-shadowItem);
-  box-shadow: var(--box-shadow1), var(--box-shadowGlass), var(--box-shadowItem);
+  -webkit-box-shadow: var(--box-shadowGlass), var(--box-shadowItem);
+  -moz-box-shadow: var(--box-shadowGlass), var(--box-shadowItem);
+  box-shadow: var(--box-shadowGlass), var(--box-shadowItem);
 }
 
 .vs_text {
@@ -717,7 +716,7 @@ transform: translate(100%, -50%);
 
 .split-button {
   display: flex;
-  width: 30rem;
+  width: 55rem;
   height: 5rem;
   border: none;
   border-radius: 5rem;
@@ -885,7 +884,6 @@ transform: translate(100%, -50%);
   z-index: 10;
   filter: none;
 }
-
 .metadata_wrapper .metadata_songTitle {
   font-size: 2rem; 
   text-transform: uppercase;
@@ -923,7 +921,7 @@ transform: translate(100%, -50%);
   animation: none;
 }
 
-#container_songGuessing #mediaContainer #songGuessing_pp #svg-container {
+#svg-container {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -931,8 +929,8 @@ transform: translate(100%, -50%);
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 4rem; 
-  width: 4rem;
+  height: 7rem; 
+  width: 7rem;
   border-radius: 50%;
   background-color: hsl(240, 5%, 4%);
   -webkit-box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 1); 
@@ -945,7 +943,7 @@ transform: translate(100%, -50%);
 }
 
 #svg-container svg {
-  height: 2rem;
+  height: 3rem;
   color: var(--niceBlue);
   background-color: transparent;
   z-index: 100;
