New parameter endpoit, and ui layout

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -491,9 +491,8 @@ transform: translate(100%, -50%);
   box-sizing: content-box;
   color: var(--bg-color);
   width: auto;
-  border: 5px solid #54F7DB;
+  border: 5px solid white;
   background-color: #19af4e;
-
   z-index: 100; 
   border-radius: 1rem;
   padding: 1rem;
@@ -618,7 +617,7 @@ transform: translate(100%, -50%);
   width: 400px;
   height: 300px;
   border-radius: 4px;
-  border: 8px solid var(--spotifyColor);
+  border: 8px solid white;
   object-fit: cover;
   -webkit-box-shadow: var(--box-shadowGlass), var(--box-shadowItem);
   -moz-box-shadow: var(--box-shadowGlass), var(--box-shadowItem);
