--- a/templates/selection.html
+++ b/templates/selection.html
@@ -63,17 +63,17 @@
                 <div class="wrapper_containerPas">
                         <div class="grid_pas">
                                 
-                                <a href="{{ url_for('selection_mode', mode='battle') }}" class="music_box card1">
+                                <a href="{{ url_for('selection_mode', mode='song_battle') }}" class="music_box card1">
                                         <img src="https://images.unsplash.com/photo-1616356607338-fd87169ecf1a?q=80&w=2070&auto=format&fit=crop" alt="Playlist">
                                         <div class="text">Battle <br> vs</div>
                                 </a>
                                 
-                                <a href="{{ url_for('selection_mode', mode='guess') }}" class="music_box card2">
+                                <a href="{{ url_for('selection_mode', mode='guess_song_info') }}" class="music_box card2">
                                         <img src="https://images.unsplash.com/photo-1595177663993-4849619ab1f8?q=80&w=1974&auto=format&fit=crop" alt="Liked Title">
                                         <div class="text">Guess <br> Song / Artist</div> 
                                 </a>
                                 
-                                <a href="{{ url_for('selection_mode', mode='fav') }}" class="music_box card3">
+                                <a href="{{ url_for('selection_mode', mode='favorite_song') }}" class="music_box card3">
                                         <img src="https://images.unsplash.com/photo-1595177663993-4849619ab1f8?q=80&w=1974&auto=format&fit=crop" alt="Artist">
                                         <div class="text">Fav' <br> song</div>
                                 </a>
