new track categories with source metadata before deduplicating all tracks; rendering html base on mode pass in form

--- a/templates/parameter.html
+++ b/templates/parameter.html
@@ -19,26 +19,28 @@
 
 
     <div class="wrapper">
-      <form method="get" action="{{ url_for('selection') }}">
+      <form method="get" action="{{ url_for('play') }}">
 
         <!-- Name of mod choose in prev endpoint -->
-        <input type="hidden" name="m" value="{{ mode }}"> 
+        <input type="hidden" name="m" value="{{ mode }}">
+        
+        <input type="hidden" name="vM" value="{{ validMods|join(',') }}">
         
         <div id="contentOption">
 
           <p id="infoCategory">Select one or more music category:</p>
 
-          <input id="playlistInput" type="checkbox" name="t" value="playlist">
+          <input id="playlistInput" type="checkbox" name="c" value="playlist">
           <label for="playlistInput" class="visiblePart">
             <p>Playlists</p>
           </label>
         
-          <input id="albumInput" type="checkbox" name="t" value="album">
+          <input id="albumInput" type="checkbox" name="c" value="album">
           <label for="albumInput" class="visiblePart">
             <p>Albums</p>
           </label>
         
-          <input id="likedTitleInput" type="checkbox" name="t" value="liked_title">
+          <input id="likedTitleInput" type="checkbox" name="c" value="liked_title">
           <label for="likedTitleInput" class="visiblePart">
             <p>Liked Titles</p>
           </label>
@@ -46,17 +48,17 @@
           <div id="totalOption">
             <p>Choose amount of tracks to play with:</p>
             <div class="radio-grid">
-              <input type="radio" id="n10" name="n" value="10" checked>
-              <label for="n10" class="box">10</label>
+              <input type="radio" id="t10" name="t" value="10" checked>
+              <label for="t10" class="box">10</label>
         
-              <input type="radio" id="n25" name="n" value="25">
-              <label for="n25" class="box">25</label>
+              <input type="radio" id="t25" name="t" value="25">
+              <label for="t25" class="box">25</label>
         
-              <input type="radio" id="n50" name="n" value="50">
-              <label for="n50" class="box">50</label>
+              <input type="radio" id="t50" name="t" value="50">
+              <label for="t50" class="box">50</label>
         
-              <input type="radio" id="n0" name="n" value="0">
-              <label for="n0" class="box">All</label>
+              <input type="radio" id="t0" name="t" value="0">
+              <label for="t0" class="box">All</label>
             </div>
           </div>
 
