Improving algorythme on the unique track deduplication function with 0(n) complexity

--- a/templates/selection.html
+++ b/templates/selection.html
@@ -27,8 +27,7 @@
                         
                         <hr style="width: 70%; color:  white; opacity: 60%; margin-block: 3rem">
 
-                        <p>Song guessed: <span class="dataTotal">1143 / <span>{{ TOTAL_SONGS or "1143"}}</span></span></span></p>
-                        <p>Artist guessed: <span class="dataTotal">788 / <span>{{ TOTAL_ARTISTS or "788" }}</span></span></p>
+                        <p>Song guessed: <span class="dataTotal">{{ TOTAL_TRACKS or "0"}} / <span>{{ TOTAL_TRACKS or "0"}}</span></span></span></p>
                         
                         <!--<p>Score: <span>0</p>
                         <p>Rank: <span>F</p> -->
