--- a/static/css/index.css
+++ b/static/css/index.css
@@ -473,7 +473,6 @@ transform: translate(100%, -50%);
   padding-top: 17rem;
   margin-left: 10rem;
   gap: 5rem;
-
   transition: all 1s ease-in-out;
 }
 
@@ -491,7 +490,7 @@ transform: translate(100%, -50%);
   box-sizing: content-box;
   color: var(--bg-color);
   width: auto;
-  border: 5px solid white;
+  border: 3px solid white;
   background-color: #19af4e;
   z-index: 100; 
   border-radius: 1rem;
@@ -617,11 +616,18 @@ transform: translate(100%, -50%);
   width: 400px;
   height: 300px;
   border-radius: 4px;
-  border: 8px solid white;
   object-fit: cover;
   -webkit-box-shadow: var(--box-shadowGlass), var(--box-shadowItem);
   -moz-box-shadow: var(--box-shadowGlass), var(--box-shadowItem);
   box-shadow: var(--box-shadowGlass), var(--box-shadowItem);
+}
+
+.video1 {
+  border: 1rem solid var(--niceBlue);
+}
+
+.video2 {
+  border: 1rem solid var(--spotifyColor);
 }
 
 .vs_text {
@@ -715,14 +721,14 @@ transform: translate(100%, -50%);
 
 .split-button {
   display: flex;
+  box-sizing: border-box;
   width: 55rem;
-  height: 5rem;
-  border: none;
+  height: 6rem;
+  border: 2px solid black;
   border-radius: 5rem;
   -webkit-box-shadow: 1px 2px 5px rgba(255, 255, 255, 0.2), var(--box-shadowItem);
   -moz-box-shadow: 1px 2px 5px rgba(255, 255, 255, 0.2), var(--box-shadowItem);
   box-shadow: 1px 2px 5px rgba(255, 255, 255, 0.2), var(--box-shadowItem);
-
 }
 
 .half {
